syntax = "proto3";

package services;

import "models.proto";

service OrderDispatcher {
  rpc limit(models.CreateLimitOrderRequest) returns (models.GenericMessage);
  rpc market(models.CreateMarketOrderRequest) returns (models.GenericMessage);
}
